--- a/index.html
+++ b/index.html
@@ -1,23 +1,518 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <title>Home</title>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width" />
-    <!--
-      Need a visual blank slate?
-      Remove all code in `styles.css`!
-    -->
-    <link rel="stylesheet" href="styles.css" />
-    <script type="module" src="script.js"></script>
-  </head>
-  <body>
-    <nav>
-      <a href="/" aria-current="page">Home</a>
-      <a href="/page2.html">Other page</a>
-    </nav>
-    <main>
-      <h1>Home page</h1>
-    </main>
-  </body>
-</html>
+  <style>
+    /* New Style: Soft Blue Palette for Trust and Readability */
+    body {
+      font-family: 'Noto Sans KR', sans-serif;
+      margin: 0;
+      padding: 0;
+      line-height: 1.8; /* Increased line-height for readability */
+      color: #333;
+      background: #f4f7fa; /* Light background for softer look */
+    }
+    header, nav, section, footer {
+      padding: 20px;
+      max-width: 1200px;
+      margin: auto;
+      background: #fff;
+      margin-bottom: 25px; /* Increased spacing between sections */
+      border-radius: 10px; /* Softer, rounded corners */
+      box-shadow: 0 4px 12px rgba(0,0,0,0.08); /* More subtle shadow */
+    }
+    header h1 {
+      margin-bottom: 5px;
+      color: #007bff; /* Primary brand color: blue */
+      font-size: 2.2rem;
+      font-weight: 700;
+    }
+    header p {
+      color: #555;
+      font-size: 1.1rem;
+      line-height: 1.5;
+    }
+    nav {
+      background: #007bff;
+      border-radius: 10px;
+      text-align: center;
+      padding: 18px 0;
+      margin-bottom: 30px;
+    }
+    nav a {
+      color: #fff;
+      margin: 0 20px;
+      font-weight: 600;
+      text-decoration: none;
+      font-size: 1.1rem;
+      transition: color 0.3s, background-color 0.3s;
+      padding: 8px 12px;
+      border-radius: 4px;
+    }
+    nav a:hover {
+      background-color: #0056b3;
+      text-decoration: none;
+    }
+    h2 {
+      border-bottom: 3px solid #007bff;
+      padding-bottom: 8px;
+      margin-bottom: 20px;
+      color: #2c3e50;
+      font-size: 1.8rem;
+      font-weight: 700;
+    }
+    h3 {
+      color: #007bff;
+      font-size: 1.4rem;
+      margin-top: 25px;
+      margin-bottom: 10px;
+    }
+    section p {
+      font-size: 1rem;
+      color: #444;
+      line-height: 1.7;
+      margin-bottom: 15px;
+    }
+    ul, ol {
+      margin-left: 20px;
+      line-height: 1.7;
+      color: #444;
+    }
+    .cta {
+      display: inline-block;
+      background-color: #007bff;
+      color: white;
+      padding: 15px 35px;
+      border-radius: 8px;
+      font-weight: 700;
+      font-size: 1.1rem;
+      text-decoration: none;
+      transition: background-color 0.3s ease;
+      margin-top: 15px;
+      box-shadow: 0 4px 8px rgba(0, 123, 255, 0.3);
+    }
+    .cta:hover {
+      background-color: #0056b3;
+    }
+    .info-card {
+      background: #fdfdfd;
+      padding: 20px;
+      border-radius: 8px;
+      margin-bottom: 20px;
+      border-left: 5px solid #007bff;
+      box-shadow: 0 2px 5px rgba(0,0,0,0.05);
+    }
+    .info-card strong {
+      color: #007bff;
+    }
+    form label {
+      display: block;
+      margin-bottom: 10px;
+      font-weight: 600;
+      font-size: 1rem;
+    }
+    form input[type="text"], form input[type="number"], form input[type="date"], form input[type="tel"], form select {
+      width: 100%;
+      padding: 12px;
+      margin-top: 4px;
+      margin-bottom: 15px;
+      border-radius: 4px;
+      border: 1px solid #ddd;
+      font-size: 1rem;
+      box-sizing: border-box; /* Ensures padding doesn't increase total width */
+    }
+    form button {
+      margin-top: 20px;
+      width: 100%;
+      cursor: pointer;
+      padding: 15px;
+      font-size: 1.1rem;
+      background-color: #28a745; /* Green for action button */
+      color: white;
+      border: none;
+      border-radius: 4px;
+      transition: background-color 0.3s;
+    }
+    form button:hover {
+      background-color: #218838;
+    }
+    table {
+      width: 100%;
+      border-collapse: collapse;
+      margin-bottom: 20px;
+      background: #fafafa;
+    }
+    th, td {
+      border: 1px solid #ddd;
+      padding: 12px;
+      text-align: left;
+    }
+    th {
+      background-color: #f2f2f2;
+      font-weight: 600;
+      color: #333;
+    }
+    .external-link {
+      color: #007bff;
+      text-decoration: underline;
+      transition: opacity 0.3s;
+    }
+    .external-link:hover {
+      opacity: 0.7;
+    }
+    dl.faq dt {
+      font-weight: 700;
+      margin-top: 20px;
+      cursor: pointer;
+      color: #007bff;
+      font-size: 1.1rem;
+    }
+    dl.faq dd {
+      margin-left: 15px;
+      margin-top: 8px;
+      color: #555;
+      background: #f9f9f9;
+      padding: 15px;
+      border-radius: 6px;
+      border-left: 3px solid #007bff;
+    }
+    .warning {
+      color: #dc3545;
+      font-weight: 600;
+      margin-top: 10px;
+    }
+  </style>
+
+  <!-- JSON-LD Schema for FinancialService -->
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "FinancialService",
+    "name": "실손보험 다이렉트 비교센터",
+    "description": "2026년 최신 4세대 실손보험 다이렉트 상품 비교 및 견적 서비스",
+    "url": "https://www.yourdomain.kr/",
+    "serviceType": "Health Insurance Comparison",
+    "areaServed": {
+      "@type": "AdministrativeArea",
+      "name": "대한민국"
+    },
+    "provider": {
+      "@type": "Organization",
+      "name": "보험 비교 플랫폼",
+      "telephone": "1661-1234",
+      "address": {
+        "@type": "PostalAddress",
+        "streetAddress": "서울시 강남구 테헤란로",
+        "addressLocality": "서울",
+        "postalCode": "06130",
+        "addressCountry": "KR"
+      }
+    },
+    "hasOfferCatalog": {
+      "@type": "OfferCatalog",
+      "name": "실손보험 상품 비교",
+      "itemListElement": [
+        {"@type": "Offer","itemOffered": {"@type": "Service","name": "4세대 실손보험 다이렉트 비교"}},
+        {"@type": "Offer","itemOffered": {"@type": "Service","name": "어린이 실손보험 비교"}},
+        {"@type": "Offer","itemOffered": {"@type": "Service","name": "유병자 실손보험 비교"}}
+      ]
+    }
+  }
+  </script>
+</head>
+<body>
+
+<header id="top">
+  <h1>실손보험 다이렉트 비교: 2026년 최신 가이드 및 무료 견적</h1>
+  <p>복잡한 <strong>실비보험</strong>, 2026년 개정된 <strong>4세대 실손보험</strong>의 핵심 내용을 이해하고, 다이렉트 비교로 <strong>보험료 절약</strong>하는 방법을 알려드립니다. <br>나에게 맞는 최적의 <strong>실손보험</strong>을 전문가와 함께 찾아보세요!</p>
+  <a href="#quote-form" class="cta">무료 실손보험 견적 비교하기</a>
+</header>
+
+<nav>
+  <a href="#overview">실손보험 개요</a>
+  <a href="#comparison">다이렉트 비교 가이드</a>
+  <a href="#generation4">4세대 실손보험 분석</a>
+  <a href="#fee-structure">보험료 구조 및 할인/할증</a>
+  <a href="#quote-form">무료 견적 신청</a>
+  <a href="#faq">자주 묻는 질문</a>
+</nav>
+
+<section id="overview" aria-label="실손보험 개요">
+  <h2>실손보험이란 무엇이며, 왜 다이렉트가 유리한가요?</h2>
+  <div class="info-card">
+    <h3>실손보험 핵심 개념: 병원비 부담 경감의 필수 보험</h3>
+    <p>실손의료보험(실비보험)은 질병이나 상해로 인해 병원 치료를 받았을 때, 실제로 지출한 의료비를 보장해주는 보험 상품입니다. 국민건강보험이 적용되지 않는 비급여 항목까지 일정 부분 보장해주기 때문에, 가계 의료비 부담을 줄이는 데 핵심적인 역할을 합니다. 2026년 현재까지도 실손보험은 국민 대다수가 가입하고 있는 필수 보험으로 자리매김하고 있습니다.</p>
+
+    <p><strong>실손보험 다이렉트</strong> 가입은 설계사 채널을 거치지 않고 소비자가 직접 온라인으로 가입하는 방식을 의미합니다. 다이렉트 채널은 설계사 수수료가 절감되어 일반적으로 보험료가 더 저렴하다는 장점이 있습니다. 또한, 여러 보험사의 상품을 직접 비교하고 가입할 수 있어 합리적인 선택이 가능합니다.</p>
+
+    <p>특히 2026년 현재의 <strong>4세대 실손보험</strong>은 기존 세대와 달리 보험료 산정 방식이 복잡해졌기 때문에, 다이렉트 비교를 통해 자신의 의료 이용 패턴에 맞는 최적의 상품을 선택하는 것이 중요합니다.</p>
+  </div>
+
+  <div class="info-card">
+    <h3>다이렉트 가입의 장점 (Naver 검색 연관 키워드 분석)</h3>
+    <ul>
+      <li><strong>보험료 절감:</strong> 설계사 수수료 및 운영 비용이 제외되어 보험료가 10~30% 가량 저렴합니다. (관련 검색어: <strong>실손보험료 절약법</strong>)</li>
+      <li><strong>간편한 비교:</strong> 여러 보험사의 상품을 한눈에 비교할 수 있어 시간을 절약하고 합리적인 선택이 가능합니다. (관련 검색어: <strong>실비보험 비교 사이트</strong>)</li>
+      <li><strong>정보 접근성:</strong> 상품 정보가 투명하게 공개되어 있어 꼼꼼한 확인 후 가입할 수 있습니다. (관련 검색어: <strong>실손보험 가입 조건</strong>)</li>
+    </ul>
+  </div>
+</section>
+
+<section id="comparison" aria-label="다이렉트 실손보험 비교 가이드">
+  <h2>실손보험 다이렉트 비교 가이드: 2026년 가입 전 필수 확인사항</h2>
+  <div class="info-card">
+    <h3>1. 4세대 실손보험의 핵심 변화: '급여'와 '비급여' 분리 청구</h3>
+    <p>2021년 7월 도입된 4세대 실손보험은 기존 실손보험과 달리 '주계약(급여)'과 '특약(비급여)'이 분리되어 있습니다. 이는 불필요한 비급여 진료를 억제하고 보험료 부담을 합리화하기 위한 조치입니다.</p>
+
+    <p><strong>급여 보장 (주계약):</strong> 국민건강보험의 급여 항목(본인부담금)을 보장합니다. 통원 치료 시 자기부담금은 1만 원 또는 2만 원(병의원 규모별 차등)입니다.</p>
+    <p><strong>비급여 보장 (특약):</strong> 건강보험이 적용되지 않는 도수치료, 주사제, 자기공명영상(MRI) 등을 보장합니다. 자기부담금은 3만 원과 보장 대상 의료비의 30% 중 큰 금액입니다.</p>
+  </div>
+
+  <div class="info-card">
+    <h3>2. 보험료 할인/할증 시스템 (2026년 적용)</h3>
+    <p>4세대 실손보험의 가장 큰 특징은 보험료가 개인의 의료 이용량에 따라 달라지는 '할인/할증' 제도입니다. 보험 가입 후 1년 동안 비급여 진료비 청구액을 기준으로 다음 해 보험료가 변동됩니다.</p>
+
+    <p><strong>할인 대상:</strong> 비급여 보험금을 청구하지 않은 가입자는 다음 해 보험료가 <strong>10% 할인</strong>됩니다. (2026년 기준)</p>
+    <p><strong>할증 대상:</strong> 비급여 보험금 청구액이 일정 기준을 초과한 가입자는 최대 <strong>300%까지 할증</strong>될 수 있습니다.</p>
+
+    <div class="warning">※ 주의: 할증은 비급여 항목에만 적용됩니다. 암, 뇌졸중 등 중대 질병으로 인한 급여 진료로 보험료가 할증되는 일은 없습니다.</div>
+
+    <table aria-label="실손보험료 할증/할인율 표">
+      <caption>비급여 진료 청구액에 따른 보험료 할증 단계 (2026년 기준)</caption>
+      <thead>
+        <tr>
+          <th>단계</th>
+          <th>연간 비급여 청구액</th>
+          <th>다음 해 보험료 변동</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr>
+          <td>1단계 (할인)</td>
+          <td>0원</td>
+          <td>10% 할인</td>
+        </tr>
+        <tr>
+          <td>2단계 (유지)</td>
+          <td>100만원 미만</td>
+          <td>보험료 변동 없음 (유지)</td>
+        </tr>
+        <tr>
+          <td>3단계 (할증)</td>
+          <td>100만원 이상 ~ 150만원 미만</td>
+          <td>100% 할증</td>
+        </tr>
+        <tr>
+          <td>4단계 (할증)</td>
+          <td>150만원 이상 ~ 300만원 미만</td>
+          <td>200% 할증</td>
+        </tr>
+        <tr>
+          <td>5단계 (할증)</td>
+          <td>300만원 이상</td>
+          <td>300% 할증</td>
+        </tr>
+      </tbody>
+    </table>
+  </div>
+
+  <div class="info-card">
+    <h3>3. 다이렉트 비교 시 고려해야 할 중요 요소</h3>
+    <ol>
+      <li><strong>갱신 주기:</strong> 실손보험은 1년 갱신형 상품입니다. 매년 보험료가 변동될 수 있습니다.</li>
+      <li><strong>보장 내용의 통일성:</strong> 2026년 현재 4세대 실손보험의 보장 내용은 모든 보험사가 동일합니다. 따라서 보험료가 저렴한 상품을 선택하는 것이 다이렉트 비교의 핵심입니다.</li>
+      <li><strong>자기부담금 확인:</strong> 급여/비급여 각각의 자기부담금을 정확히 인지해야 합니다.</li>
+      <li><strong>통원 치료 한도:</strong> 통원 치료 시 1회당 보상 한도를 확인해야 합니다. 4세대 실손보험은 1회 통원 치료비 한도가 20만원으로 설정되어 있습니다.</li>
+    </ol>
+  </div>
+</section>
+
+<section id="generation4" aria-label="4세대 실손보험 심층 분석">
+  <h2>4세대 실손보험 심층 분석: 가입 연령대별 고려사항 (2026년 정보)</h2>
+  <div class="info-card">
+    <h3>어린이 실손보험: 성장기 자녀를 위한 선택</h3>
+    <p>어린이의 경우 병원 방문 빈도가 높아 <strong>어린이 실손보험</strong> 가입 시 비급여 청구액 할증에 대한 부담이 있을 수 있습니다. 하지만 2026년 기준으로 어린이는 성인보다 상대적으로 낮은 보험료로 가입할 수 있습니다. 특히 성장기 질병이나 상해에 대비하여 비급여 특약을 꼼꼼하게 확인하는 것이 중요합니다. 어린이 실손보험은 다이렉트 가입 시 보험료 절감 효과가 커서 많은 부모들이 선호하고 있습니다.</p>
+    <p><strong>주요 고려사항:</strong> 아이의 건강 상태와 예방 접종 이력, 그리고 학교 생활 중 발생할 수 있는 사고에 대비한 비급여 특약을 중점적으로 비교해야 합니다. (연관 검색어: <strong>어린이 실손보험 다이렉트</strong>)</p>
+  </div>
+
+  <div class="info-card">
+    <h3>청년/직장인 실손보험: 꼼꼼한 비교가 필수</h3>
+    <p>청년 및 직장인은 상대적으로 건강한 연령대이므로 보험료가 저렴한 시기입니다. 하지만 불필요한 비급여 진료(도수치료, 영양제 주사 등) 이용이 늘어나는 연령대이기도 합니다. 다이렉트 비교를 통해 자신의 의료 이용 패턴을 정확히 파악하고, 비급여 할증을 염두에 두어 상품을 선택해야 합니다. 2026년 현재 많은 다이렉트 보험사들이 청년층을 대상으로 한 맞춤형 상품을 선보이고 있습니다.</p>
+    <p><strong>주요 고려사항:</strong> 다이렉트 가입 시 여러 보험사의 견적을 받아보고, 장기적인 관점에서 보험료가 저렴한 상품을 선택하는 것이 유리합니다. (연관 검색어: <strong>실손보험 다이렉트 추천</strong>)</p>
+  </div>
+
+  <div class="info-card">
+    <h3>고령자 및 유병자 실손보험: 꼼꼼한 가입 심사 대비</h3>
+    <p>만 65세 이상의 고령자나 이미 질병을 앓고 있는 유병자는 일반 실손보험 가입이 어렵거나 제한될 수 있습니다. 이 경우 <strong>유병자 실손보험</strong>이나 <strong>간편심사 실손보험</strong>을 고려해야 합니다. 유병자 실손보험은 일반 실손보험에 비해 자기부담금이 높고 보장 범위가 좁지만, 건강 상태에 관계없이 가입할 수 있다는 장점이 있습니다.</p>
+    <p><strong>주요 고려사항:</strong> 다이렉트 비교 시 유병자 상품의 가입 조건을 정확히 확인하고, 보험료 대비 보장 내용을 꼼꼼하게 비교해야 합니다. (연관 검색어: <strong>유병자 실손보험 가입</strong>)</p>
+  </div>
+</section>
+
+<section id="fee-structure" aria-label="보험료 구조 및 할인/할증">
+  <h2>실손보험료 구조 분석: 2026년 기준 보험료 변동 요인</h2>
+  <div class="info-card">
+    <h3>연령 및 성별에 따른 기본 보험료 비교</h3>
+    <p>실손보험료는 연령과 성별에 따라 다르게 책정됩니다. 일반적으로 남성보다 여성이, 고령층으로 갈수록 보험료가 높아지는 경향이 있습니다. 이는 평균적으로 여성이 남성보다 의료 이용률이 높고, 연령이 증가할수록 질병 발생률이 증가하기 때문입니다.</p>
+    <table aria-label="연령별 실손보험료 평균 비교">
+      <caption>연령별 실손보험료 평균 비교 (2026년 4세대 실손보험, 예시)</caption>
+      <thead>
+        <tr>
+          <th>연령대</th>
+          <th>남성 (평균)</th>
+          <th>여성 (평균)</th>
+          <th>주요 특징</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr>
+          <td>20대</td>
+          <td>1만원 내외</td>
+          <td>1만 2천원 내외</td>
+          <td>보험료 최저 구간, 다이렉트 절감 효과 큼</td>
+        </tr>
+        <tr>
+          <td>30대</td>
+          <td>1만 5천원 내외</td>
+          <td>1만 8천원 내외</td>
+          <td>의료 이용 증가 시작, 비급여 할증 주의</td>
+        </tr>
+        <tr>
+          <td>40대</td>
+          <td>2만원 내외</td>
+          <td>2만 5천원 내외</td>
+          <td>보험료 상승폭 증가, 건강 관리가 중요</td>
+        </tr>
+        <tr>
+          <td>50대</td>
+          <td>3만원 내외</td>
+          <td>3만 8천원 내외</td>
+          <td>유병자 보험 전환 고려 시점</td>
+        </tr>
+      </tbody>
+    </table>
+  </div>
+
+  <div class="info-card">
+    <h3>보험사별 다이렉트 실손보험료 비교 (2026년 기준)</h3>
+    <p>4세대 실손보험은 상품 내용이 동일하지만, 보험사별로 책정되는 보험료는 다를 수 있습니다. 이는 보험사별 손해율과 운영 방식의 차이에서 비롯됩니다. 다이렉트 비교를 통해 여러 보험사의 견적을 받아보는 것이 중요한 이유입니다.</p>
+    <p><strong>주요 비교 대상 보험사:</strong> A사(손해보험사), B사(생명보험사), C사(다이렉트 전문 보험사). 각 사별로 동일 조건의 가입자에게 제시하는 보험료를 비교하여 가장 저렴한 곳을 선택해야 합니다.</p>
+    <div class="warning">※ 중요: 보험료가 저렴한 상품을 선택하되, 가입 후 청구 과정에서 시스템이 불편하지 않은지, 고객 후기가 좋은지 함께 확인하는 것이 좋습니다.</div>
+  </div>
+
+  <div class="info-card">
+    <h3>실손보험 다이렉트 가입 과정 상세 안내</h3>
+    <ol>
+      <li><strong>정보 입력:</strong> 나이, 성별, 과거 병력 등 기본 정보 입력</li>
+      <li><strong>보험사별 견적 비교:</strong> 다이렉트 비교 플랫폼에서 여러 보험사의 실손보험료 확인</li>
+      <li><strong>가입 설계:</strong> 전문가와 상담을 통해 최적의 상품 선택 (특약 구성 조언)</li>
+      <li><strong>가입 신청 및 심사:</strong> 온라인으로 직접 신청하고 심사 진행</li>
+      <li><strong>완료:</strong> 보험증권 수령 및 보험료 납입</li>
+    </ol>
+  </div>
+</section>
+
+<section id="quote-form" aria-label="무료 견적 신청 및 맞춤 상담">
+  <h2>무료 실손보험 견적 비교 신청하기</h2>
+  <form action="/submit-estimate" method="POST" aria-describedby="견적폼설명">
+    <p id="견적폼설명">아래 폼을 작성해주시면 2026년 최신 4세대 실손보험 다이렉트 상품을 전문가가 비교해 드립니다. <br>정확한 상담을 위해 상세 정보를 입력해주세요.</p>
+
+    <div style="display: grid; grid-template-columns: 1fr 1fr; gap: 20px;">
+        <div>
+            <label for="name">이름</label>
+            <input type="text" id="name" name="name" placeholder="이름을 입력해주세요" required />
+        </div>
+        <div>
+            <label for="birthdate">생년월일 (YYYYMMDD)</label>
+            <input type="number" id="birthdate" name="birthdate" placeholder="19901025" pattern="[0-9]{8}" required />
+        </div>
+    </div>
+
+    <div style="display: grid; grid-template-columns: 1fr 1fr; gap: 20px;">
+        <div>
+            <label for="gender">성별</label>
+            <select id="gender" name="gender" required>
+                <option value="">선택하세요</option>
+                <option value="male">남성</option>
+                <option value="female">여성</option>
+            </select>
+        </div>
+        <div>
+            <label for="phone">연락처</label>
+            <input type="tel" id="phone" name="phone" placeholder="010-1234-5678" pattern="[0-9]{3}-[0-9]{4}-[0-9]{4}" required />
+        </div>
+    </div>
+
+    <div class="info-card" style="margin-top: 20px;">
+        <h3>현재 건강 상태 확인 (심사 기준)</h3>
+        <label for="hospitalization">최근 3개월 이내 병원 진료(입원, 수술, 추가 검사) 기록이 있습니까?</label>
+        <select id="hospitalization" name="hospitalization" required>
+            <option value="">선택하세요</option>
+            <option value="no">없음</option>
+            <option value="yes">있음</option>
+        </select>
+
+        <label for="major-illness">최근 5년 이내 암, 협심증, 뇌졸중 등 중대 질병 진단을 받은 적이 있습니까?</label>
+        <select id="major-illness" name="major-illness" required>
+            <option value="">선택하세요</option>
+            <option value="no">없음</option>
+            <option value="yes">있음</option>
+        </select>
+
+        <label for="current-meds">현재 복용 중인 약이 있습니까?</label>
+        <select id="current-meds" name="current-meds" required>
+            <option value="">선택하세요</option>
+            <option value="no">없음</option>
+            <option value="yes">있음</option>
+        </select>
+    </div>
+
+    <label for="existing-insurance">현재 가입되어 있는 실손보험이 있습니까?</label>
+    <select id="existing-insurance" name="existing-insurance" required>
+        <option value="">선택하세요</option>
+        <option value="none">없음</option>
+        <option value="gen4">4세대 실손보험</option>
+        <option value="gen3">3세대 이전 실손보험</option>
+        <option value="undecided">잘 모르겠음</option>
+    </select>
+
+    <label for="comment">추가 문의사항</label>
+    <textarea id="comment" name="comment" rows="4" placeholder="예: 비급여 도수치료 보장이 중요합니다."></textarea>
+
+    <button type="submit" class="cta">무료 견적 요청하기</button>
+  </form>
+</section>
+
+<section id="faq" aria-label="자주 묻는 질문 FAQ">
+  <h2>자주 묻는 질문 (FAQ)</h2>
+  <dl class="faq">
+    <dt>Q. 실손보험 다이렉트 가입과 설계사 가입의 차이점은 무엇인가요?</dt>
+    <dd>A. 다이렉트 가입은 설계사 수수료가 없어 보험료가 저렴한 반면, 설계사 가입은 전문가의 조언을 받을 수 있다는 장점이 있습니다. 다이렉트 비교센터를 이용하면 두 가지 장점을 모두 취할 수 있습니다.</dd>
+
+    <dt>Q. 4세대 실손보험으로 전환해야 할까요? 기존 실손보험을 유지하는 게 좋을까요?</dt>
+    <dd>A. 2세대나 3세대 실손보험에 가입되어 있다면, 보험료가 저렴해지는 4세대로 전환할지 신중하게 결정해야 합니다. 기존 상품이 보장 범위가 더 넓을 수 있으므로 전문가와 상담 후 결정하는 것이 좋습니다. 의료 이용량이 적고 보험료 부담이 크다면 4세대 전환을 고려할 수 있습니다.</dd>
+
+    <dt>Q. 비급여 할증이 걱정되는데, 다이렉트 가입 시 유의해야 할 점은 무엇인가요?</dt>
+    <dd>A. 4세대 실손보험의 비급여 할증 제도는 과도한 의료 쇼핑을 방지하기 위함입니다. 만약 잦은 비급여 진료(도수치료 등)를 받는다면 할증될 수 있습니다. 다이렉트 가입 시 자신의 건강 상태와 비급여 이용 빈도를 고려하여 청구액이 높은 경우 보험료 할증을 감수해야 할 수 있습니다.</dd>
+
+    <dt>Q. 다이렉트 가입 후 청구 과정은 복잡하지 않나요?</dt>
+    <dd>A. 대부분의 보험사는 모바일 앱을 통해 간편하게 보험금 청구가 가능합니다. 다이렉트 가입자에게도 동일한 청구 시스템이 제공되므로 걱정할 필요가 없습니다.</dd>
+
+    <dt>Q. 실손보험 다이렉트 가입 시 꼭 확인해야 할 외부 정보는 무엇인가요?</dt>
+    <dd>A. 금융감독원(FSS) 홈페이지를 통해 실손보험 관련 약관이나 분쟁 조정 사례를 확인하여 가입 전 충분히 숙지해야 합니다.</dd>
+  </dl>
+</section>
+
+<section id="footer-links" aria-label="추가 정보 및 외부 링크">
+  <h2>참고 자료 및 유용한 외부 링크</h2>
+  <p>실손보험 가입 결정 전, 공신력 있는 기관의 정보를 참고하여 현명한 선택을 하시기 바랍니다.</p>
+  <ul>
+    <li><a href="https://www.fss.or.kr/" target="_blank" class="external-link">금융감독원 (FSS)</a>: 금융 소비자 보호 및 분쟁 조정 정보 (실손보험 약관 확인)</li>
+    <li><a href="https://www.consumer.go.kr/main/index.do" target="_blank" class="external-link">한국소비자원</a>: 보험 관련 피해 사례 및 소비자 정보 (보험사별 민원 현황)</li>
+    <li><a href="https://namu.wiki/w/%EC%8B%A4%EC%86%90%EC%9D%98%EB%A3%8C%EB%B3%B4%ED%97%98" target="_blank" class="external-link">나무위키</a>: 실손의료보험 개요 및 세부 항목 설명</li>
+    <li><a href="http://www.mw.go.kr/" target="_blank" class="external-link">보건복지부 (MOHW)</a>: 국민건강보험 정책 및 의료비 관련 정보</li>
+    <li><a href="https://www.koreainsurance.or.kr/" target="_blank" class="external-link">생명보험협회/손해보험협회</a>: 보험 상품 비교 공시 및 보험 정보 (통계 자료)</li>
+  </ul>
+</section>
+
+<footer>
+  <p style="text-align:center; color:#777; font-size:0.9rem;">&copy; 2026 실손보험 다이렉트 비교센터 | 주소: 서울시 강남구 테헤란로 123 | 사업자등록번호: 123-45-67890 | 고객센터: 1661-1234</p>
+</footer>
+
+
+  
